--- a/app/views/todo_items/index.html.erb
+++ b/app/views/todo_items/index.html.erb
@@ -5,7 +5,10 @@
 	<% @todo_list.todo_items.each do |todo_item| %>
 	<li id = "<%= dom_id(todo_item)%>">
 		<%= todo_item.content %>
-		<%= link_to "Edit", edit_todo_list_todo_item_path(todo_item)%> </li>
+		<%= link_to "Edit", edit_todo_list_todo_item_path(todo_item)%>
+		<%= link_to "Delete", todo_list_todo_item_path(todo_item), method: :delete,
+		data: { confirm: "Are you sure?"}%>
+		 </li>
 	<% end %>
 </ul>
 
